--- a/setup.cfg
+++ b/setup.cfg
@@ -382,7 +382,8 @@ openstack.image.v2 =
     image_show = openstackclient.image.v2.image:ShowImage
     image_set = openstackclient.image.v2.image:SetImage
     image_unset = openstackclient.image.v2.image:UnsetImage
-    metadata_object_create = openstackclient.image.v2.metadef:CreateMetadataObject
+    metadef_object_create = openstackclient.image.v2.metadef:CreateMetadataObject
+    metadef_object_delete = openstackclient.image.v2.metadef:DeleteMetadataObject
 
 openstack.network.v2 =
     address_group_create = openstackclient.network.v2.address_group:CreateAddressGroup
